--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+----- IIGS Specific Stuff Here
+
+For now refer to the makefile (open it up)
+
+----- BELOW IS THE ORIGINAL README FROM THE import_xrick branch
 **
 
 xrick - version #021212
